# Robotics

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: overview.md
scripts/: benchmarks.py
src/: __init__.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: jobs.py  output.py
src/cli/: anonymize.py  main.py
src/core/: __init__.py  config.py  job_runner.py  job_store.py  logging.py  models.py  modes.py  obscure.py  pipeline.py  summary.py  validators.py
src/io/: __init__.py  mp4.py  rosbag.py
tests/contract/: test_jobs_create.py  test_jobs_output.py  test_jobs_status.py
tests/integration/: test_api_jobs.py  test_cli_anonymize.py  test_cli_modes.py
tests/unit/: test_modes.py  test_pipeline.py
